esp_server/build/log/idf_py_stderr_output_66849
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'tcp_server_task':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:208:32: error: passing argument 1 of 'recv' makes integer from pointer without a cast [-Wint-conversion]
  208 |                 int len = recv(socket, read_buffer, BUFFER_SIZE, 0);
      |                                ^~~~~~
      |                                |
      |                                int (*)(int,  int,  int)
In file included from /home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:9:
/home/zeila/Documents/CMPT496/Graphite/esp-idf/components/lwip/include/lwip/sockets.h:59:32: note: expected 'int' but argument is of type 'int (*)(int,  int,  int)'
   59 | static inline ssize_t recv(int s,void *mem,size_t len,int flags)
      |                            ~~~~^
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:230:30: error: passing argument 1 of 'send' makes integer from pointer without a cast [-Wint-conversion]
  230 |                         send(socket, response, strlen(response), 0);
      |                              ^~~~~~
      |                              |
      |                              int (*)(int,  int,  int)
/home/zeila/Documents/CMPT496/Graphite/esp-idf/components/lwip/include/lwip/sockets.h:63:32: note: expected 'int' but argument is of type 'int (*)(int,  int,  int)'
   63 | static inline ssize_t send(int s,const void *dataptr,size_t size,int flags)
      |                            ~~~~^
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:255:30: error: passing argument 1 of 'send' makes integer from pointer without a cast [-Wint-conversion]
  255 |                         send(socket, response, strlen(response), 0);
      |                              ^~~~~~
      |                              |
      |                              int (*)(int,  int,  int)
/home/zeila/Documents/CMPT496/Graphite/esp-idf/components/lwip/include/lwip/sockets.h:63:32: note: expected 'int' but argument is of type 'int (*)(int,  int,  int)'
   63 | static inline ssize_t send(int s,const void *dataptr,size_t size,int flags)
      |                            ~~~~^
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:265:13: warning: 'esp_vfs_fat_sdmmc_unmount' is deprecated: Please use esp_vfs_fat_sdcard_unmount instead [-Wdeprecated-declarations]
  265 |             esp_vfs_fat_sdmmc_unmount();
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:6:
/home/zeila/Documents/CMPT496/Graphite/esp-idf/components/fatfs/vfs/esp_vfs_fat.h:221:11: note: declared here
  221 | esp_err_t esp_vfs_fat_sdmmc_unmount(void) __attribute__((deprecated("Please use esp_vfs_fat_sdcard_unmount instead")));
      |           ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:271:19: error: passing argument 1 of 'close' makes integer from pointer without a cast [-Wint-conversion]
  271 |             close(socket);
      |                   ^~~~~~
      |                   |
      |                   int (*)(int,  int,  int)
In file included from /home/zeila/Documents/CMPT496/Graphite/esp-idf/components/newlib/platform_include/sys/unistd.h:11,
                 from /home/zeila/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/xtensa-esp-elf/include/unistd.h:4,
                 from /home/zeila/Documents/CMPT496/Graphite/esp-idf/components/lwip/port/include/lwipopts.h:14,
                 from /home/zeila/Documents/CMPT496/Graphite/esp-idf/components/lwip/lwip/src/include/lwip/opt.h:51,
                 from /home/zeila/Documents/CMPT496/Graphite/esp-idf/components/lwip/lwip/src/include/lwip/err.h:39,
                 from /home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:8:
/home/zeila/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/xtensa-esp-elf/include/sys/unistd.h:28:20: note: expected 'int' but argument is of type 'int (*)(int,  int,  int)'
   28 | int     close (int __fildes);
      |                ~~~~^~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:274:13: error: implicit declaration of function 'write_file' [-Wimplicit-function-declaration]
  274 |             write_file(client_sock);
      |             ^~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: At top level:
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:94:13: warning: 'wifi_init_softap' defined but not used [-Wunused-function]
   94 | static void wifi_init_softap() {
      |             ^~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/esp_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
